A more complete --help message
Merge options will show up there automagically once added, just as any
new or changed general option. The "Usage" line is hardcoded, thus when
adding new positional options or whole option categories, it'll have to
be updated manually.

Also changed README to closer match current synopsis and to use <...>
for argument placeholder names.

--- a/README
+++ b/README
@@ -1,17 +1,17 @@
 A three-way doc/contributions.txt merger.
 
 SYNOPSIS
-       contribmerge [ options ] left base right
+       contribmerge (<generic options> | [<merge options>] <base> <left> <right>)
 
 DESCRIPTION
-       contribmerge incorporates all changes that lead from `base' to `right' into `left'.
-       The result ordinarily goes into `left'.
+       contribmerge incorporates all changes that lead from <base> to <right> into <left>.
+       The result ordinarily goes into <left>.
        contribmerge is useful for combining separate changes to an original.
-       Suppose `base' is the original, and both `left' and `right' are modifications of `base'.
+       Suppose <base> is the original, and both <left> and <right> are modifications of <base>.
        Then contribmerge combines both changes.
 
 OPTIONS
-       -p     Send results to standard output instead of overwriting file 'left'.
+       -p     Send results to standard output instead of overwriting file <left>.
 
        -q     Quiet; do not warn about conflicts.
 
